feat: return 503 with standard error body when no streams are available
 - Create new NoStreamsAvailableException and add it to the
   GlobalExceptionHandler
 - Replace plaintext error response with new exception
 - Change log level in the StreamingController to debug
 - Remove redundant error logging from VideoStreamingService